moved nav tabs to the left

--- a/Develop/src/index.css
+++ b/Develop/src/index.css
@@ -98,6 +98,8 @@ tbody tr:nth-child(odd) {
   display: flex;
   justify-content: flex-start;
   padding: 1em 2em;
+  width: 100vw;
+  margin-left: 2em;
 }
 
 .nav-item {
