--- a/Develop/src/index.css
+++ b/Develop/src/index.css
@@ -126,3 +126,8 @@ tbody tr:nth-child(odd) {
   flex-direction: column;
   align-items: center;
 }
+
+.buttons {
+  display: flex;
+  gap: 10rem;
+}
