--- a/Develop/src/index.css
+++ b/Develop/src/index.css
@@ -130,4 +130,8 @@ tbody tr:nth-child(odd) {
 .buttons {
   display: flex;
   gap: 10rem;
+  button {
+    padding: 1em 2em;
+    font-size: 2em;
+  }
 }
