--- a/Develop/src/index.css
+++ b/Develop/src/index.css
@@ -22,6 +22,15 @@ a:hover {
   color: #535bf2;
 }
 
+li {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   background: linear-gradient(
     180deg,
