--- a/Develop/src/index.css
+++ b/Develop/src/index.css
@@ -24,10 +24,13 @@ a:hover {
 
 li {
   list-style: none;
+  display: inline-block;
+  margin: 0 2em;
+  text-align: center;
 }
 
 img {
-  max-width: 100%;
+  max-width: 50%;
   height: auto;
 }
 
